Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -548,7 +548,10 @@
       "\tEpoch: 29\tTrain loss: 0.062\tTrain Acc: 97.83875\n",
       "\tEpoch: 29\tTest loss: 1.15\tTest Acc: 78.0553125\n",
       "==========================\n",
-      "Epoch: 30 i : 361 and loss: 0.023 acc: 0.9921875\r"
+      "\tEpoch: 30\tTrain loss: 0.05\tTrain Acc: 98.214755\n",
+      "\tEpoch: 30\tTest loss: 1.103\tTest Acc: 79.725625\n",
+      "==========================\n",
+      "Epoch: 31 i : 12 and loss: 0.017 acc: 0.9921875\r"
      ]
     }
    ],
