Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -474,7 +474,8 @@
       "\tEpoch: 10\tTrain loss: 0.43\tTrain Acc: 85.198875\n",
       "\tEpoch: 10\tTest loss: 0.739\tTest Acc: 76.775625\n",
       "==========================\n",
-      "Epoch: 11 i : 364 and loss: 0.602 acc: 0.8046875\r"
+      "\tEpoch: 11\tTrain loss: 0.397\tTrain Acc: 86.10475\n",
+      "Epoch: 11 i : 51 and loss: 0.762 acc: 0.8125625\r"
      ]
     }
    ],
