Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -595,7 +595,10 @@
       "\tEpoch: 52\tTrain loss: 0.276\tTrain Acc: 89.09275\n",
       "\tEpoch: 52\tTest loss: 1.639\tTest Acc: 70.618755\n",
       "==========================\n",
-      "Epoch: 53 i : 83 and loss: 0.287 acc: 0.8906255\r"
+      "\tEpoch: 53\tTrain loss: 0.284\tTrain Acc: 88.96655\n",
+      "\tEpoch: 53\tTest loss: 1.598\tTest Acc: 71.475125\n",
+      "==========================\n",
+      "Epoch: 54 i : 174 and loss: 0.148 acc: 0.9375755\r"
      ]
     }
    ],
