Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -475,7 +475,9 @@
       "\tEpoch: 10\tTest loss: 0.739\tTest Acc: 76.775625\n",
       "==========================\n",
       "\tEpoch: 11\tTrain loss: 0.397\tTrain Acc: 86.10475\n",
-      "Epoch: 11 i : 51 and loss: 0.762 acc: 0.8125625\r"
+      "\tEpoch: 11\tTest loss: 0.817\tTest Acc: 75.145875\n",
+      "==========================\n",
+      "Epoch: 12 i : 27 and loss: 0.447 acc: 0.8906255\r"
      ]
     }
    ],
