--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -551,7 +551,10 @@
       "\tEpoch: 30\tTrain loss: 0.05\tTrain Acc: 98.214755\n",
       "\tEpoch: 30\tTest loss: 1.103\tTest Acc: 79.725625\n",
       "==========================\n",
-      "Epoch: 31 i : 374 and loss: 0.043 acc: 0.9843755\r"
+      "\tEpoch: 31\tTrain loss: 0.049\tTrain Acc: 98.28255\n",
+      "\tEpoch: 31\tTest loss: 1.233\tTest Acc: 78.813755\n",
+      "==========================\n",
+      "Epoch: 32 i : 22 and loss: 0.006 acc: 1.0843755\r"
      ]
     }
    ],
