Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -598,7 +598,10 @@
       "\tEpoch: 53\tTrain loss: 0.284\tTrain Acc: 88.96655\n",
       "\tEpoch: 53\tTest loss: 1.598\tTest Acc: 71.475125\n",
       "==========================\n",
-      "Epoch: 54 i : 174 and loss: 0.148 acc: 0.9375755\r"
+      "\tEpoch: 54\tTrain loss: 0.277\tTrain Acc: 88.98675\n",
+      "\tEpoch: 54\tTest loss: 1.494\tTest Acc: 71.525555\n",
+      "==========================\n",
+      "Epoch: 55 i : 221 and loss: 0.045 acc: 0.9843755\r"
      ]
     }
    ],
