Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -554,7 +554,8 @@
       "\tEpoch: 31\tTrain loss: 0.049\tTrain Acc: 98.28255\n",
       "\tEpoch: 31\tTest loss: 1.233\tTest Acc: 78.813755\n",
       "==========================\n",
-      "Epoch: 32 i : 317 and loss: 0.056 acc: 0.9609375\r"
+      "\tEpoch: 32\tTrain loss: 0.042\tTrain Acc: 98.55225\n",
+      "Epoch: 32 i : 49 and loss: 1.624 acc: 0.7265625\r"
      ]
     }
    ],
