--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -555,7 +555,9 @@
       "\tEpoch: 31\tTest loss: 1.233\tTest Acc: 78.813755\n",
       "==========================\n",
       "\tEpoch: 32\tTrain loss: 0.042\tTrain Acc: 98.55225\n",
-      "Epoch: 32 i : 49 and loss: 1.624 acc: 0.7265625\r"
+      "\tEpoch: 32\tTest loss: 1.392\tTest Acc: 77.925575\n",
+      "==========================\n",
+      "Epoch: 33 i : 64 and loss: 0.014 acc: 1.0218755\r"
      ]
     }
    ],
