Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -601,7 +601,10 @@
       "\tEpoch: 54\tTrain loss: 0.277\tTrain Acc: 88.98675\n",
       "\tEpoch: 54\tTest loss: 1.494\tTest Acc: 71.525555\n",
       "==========================\n",
-      "Epoch: 55 i : 221 and loss: 0.045 acc: 0.9843755\r"
+      "\tEpoch: 55\tTrain loss: 0.127\tTrain Acc: 96.46255\n",
+      "\tEpoch: 55\tTest loss: 1.76\tTest Acc: 75.9775555\n",
+      "==========================\n",
+      "Epoch: 56 i : 261 and loss: 0.159 acc: 0.9765625\r"
      ]
     }
    ],
