Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -604,7 +604,10 @@
       "\tEpoch: 55\tTrain loss: 0.127\tTrain Acc: 96.46255\n",
       "\tEpoch: 55\tTest loss: 1.76\tTest Acc: 75.9775555\n",
       "==========================\n",
-      "Epoch: 56 i : 261 and loss: 0.159 acc: 0.9765625\r"
+      "\tEpoch: 56\tTrain loss: 0.079\tTrain Acc: 97.81855\n",
+      "\tEpoch: 56\tTest loss: 1.681\tTest Acc: 77.155575\n",
+      "==========================\n",
+      "Epoch: 57 i : 371 and loss: 0.123 acc: 0.9609375\r"
      ]
     }
    ],
