--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -557,7 +557,10 @@
       "\tEpoch: 32\tTrain loss: 0.042\tTrain Acc: 98.55225\n",
       "\tEpoch: 32\tTest loss: 1.392\tTest Acc: 77.925575\n",
       "==========================\n",
-      "Epoch: 33 i : 257 and loss: 0.064 acc: 0.9609375\r"
+      "\tEpoch: 33\tTrain loss: 0.046\tTrain Acc: 98.42275\n",
+      "\tEpoch: 33\tTest loss: 1.185\tTest Acc: 80.776255\n",
+      "==========================\n",
+      "Epoch: 34 i : 133 and loss: 0.058 acc: 0.9687575\r"
      ]
     }
    ],
