--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -477,7 +477,10 @@
       "\tEpoch: 11\tTrain loss: 0.397\tTrain Acc: 86.10475\n",
       "\tEpoch: 11\tTest loss: 0.817\tTest Acc: 75.145875\n",
       "==========================\n",
-      "Epoch: 12 i : 343 and loss: 0.312 acc: 0.8906255\r"
+      "\tEpoch: 12\tTrain loss: 0.36\tTrain Acc: 87.468375\n",
+      "\tEpoch: 12\tTest loss: 0.751\tTest Acc: 77.412525\n",
+      "==========================\n",
+      "Epoch: 13 i : 55 and loss: 0.22 acc: 0.94531255\r"
      ]
     }
    ],
