--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -560,7 +560,8 @@
       "\tEpoch: 33\tTrain loss: 0.046\tTrain Acc: 98.42275\n",
       "\tEpoch: 33\tTest loss: 1.185\tTest Acc: 80.776255\n",
       "==========================\n",
-      "Epoch: 34 i : 331 and loss: 0.012 acc: 1.0921875\r"
+      "\tEpoch: 34\tTrain loss: 0.041\tTrain Acc: 98.60855\n",
+      "Epoch: 34 i : 65 and loss: 0.781 acc: 0.8437555\r"
      ]
     }
    ],
