Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -561,7 +561,9 @@
       "\tEpoch: 33\tTest loss: 1.185\tTest Acc: 80.776255\n",
       "==========================\n",
       "\tEpoch: 34\tTrain loss: 0.041\tTrain Acc: 98.60855\n",
-      "Epoch: 34 i : 65 and loss: 0.781 acc: 0.8437555\r"
+      "\tEpoch: 34\tTest loss: 1.193\tTest Acc: 80.873755\n",
+      "==========================\n",
+      "Epoch: 35 i : 63 and loss: 0.09 acc: 0.97656255\r"
      ]
     }
    ],
