Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -607,7 +607,11 @@
       "\tEpoch: 56\tTrain loss: 0.079\tTrain Acc: 97.81855\n",
       "\tEpoch: 56\tTest loss: 1.681\tTest Acc: 77.155575\n",
       "==========================\n",
-      "Epoch: 57 i : 371 and loss: 0.123 acc: 0.9609375\r"
+      "\tEpoch: 57\tTrain loss: 0.069\tTrain Acc: 98.09855\n",
+      "\tEpoch: 57\tTest loss: 1.746\tTest Acc: 76.891875\n",
+      "==========================\n",
+      "\tEpoch: 58\tTrain loss: 0.052\tTrain Acc: 98.54855\n",
+      "Epoch: 58 i : 9 and loss: 1.986 acc: 0.7812525\r"
      ]
     }
    ],
