Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -611,7 +611,11 @@
       "\tEpoch: 57\tTest loss: 1.746\tTest Acc: 76.891875\n",
       "==========================\n",
       "\tEpoch: 58\tTrain loss: 0.052\tTrain Acc: 98.54855\n",
-      "Epoch: 58 i : 9 and loss: 1.986 acc: 0.7812525\r"
+      "\tEpoch: 58\tTest loss: 1.679\tTest Acc: 77.338125\n",
+      "==========================\n",
+      "\tEpoch: 59\tTrain loss: 0.058\tTrain Acc: 98.40475\n",
+      "\tEpoch: 59\tTest loss: 1.654\tTest Acc: 76.834375\n",
+      "==========================\n"
      ]
     }
    ],
