--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -480,7 +480,8 @@
       "\tEpoch: 12\tTrain loss: 0.36\tTrain Acc: 87.468375\n",
       "\tEpoch: 12\tTest loss: 0.751\tTest Acc: 77.412525\n",
       "==========================\n",
-      "Epoch: 13 i : 375 and loss: 0.327 acc: 0.8593755\r"
+      "\tEpoch: 13\tTrain loss: 0.317\tTrain Acc: 88.94855\n",
+      "Epoch: 13 i : 59 and loss: 0.761 acc: 0.7734375\r"
      ]
     }
    ],
