Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -481,7 +481,9 @@
       "\tEpoch: 12\tTest loss: 0.751\tTest Acc: 77.412525\n",
       "==========================\n",
       "\tEpoch: 13\tTrain loss: 0.317\tTrain Acc: 88.94855\n",
-      "Epoch: 13 i : 59 and loss: 0.761 acc: 0.7734375\r"
+      "\tEpoch: 13\tTest loss: 0.817\tTest Acc: 76.421875\n",
+      "==========================\n",
+      "Epoch: 14 i : 29 and loss: 0.219 acc: 0.9140625\r"
      ]
     }
    ],
