Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -566,7 +566,10 @@
       "\tEpoch: 35\tTrain loss: 0.042\tTrain Acc: 98.53755\n",
       "\tEpoch: 35\tTest loss: 1.167\tTest Acc: 81.069375\n",
       "==========================\n",
-      "Epoch: 36 i : 359 and loss: 0.051 acc: 0.9765625\r"
+      "\tEpoch: 36\tTrain loss: 0.045\tTrain Acc: 98.46455\n",
+      "\tEpoch: 36\tTest loss: 1.159\tTest Acc: 80.851255\n",
+      "==========================\n",
+      "Epoch: 37 i : 1 and loss: 0.038 acc: 0.984375\r"
      ]
     }
    ],
