--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -617,7 +617,9 @@
       "\tEpoch: 59\tTest loss: 1.654\tTest Acc: 76.834375\n",
       "==========================\n",
       "\tEpoch: 60\tTrain loss: 0.054\tTrain Acc: 98.55875\n",
-      "Epoch: 60 i : 66 and loss: 2.466 acc: 0.6796875\r"
+      "\tEpoch: 60\tTest loss: 1.754\tTest Acc: 76.856255\n",
+      "==========================\n",
+      "Epoch: 61 i : 98 and loss: 0.016 acc: 1.0843755\r"
      ]
     }
    ],
