--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -569,7 +569,7 @@
       "\tEpoch: 36\tTrain loss: 0.045\tTrain Acc: 98.46455\n",
       "\tEpoch: 36\tTest loss: 1.159\tTest Acc: 80.851255\n",
       "==========================\n",
-      "Epoch: 37 i : 1 and loss: 0.038 acc: 0.984375\r"
+      "Epoch: 37 i : 95 and loss: 0.023 acc: 1.0437555\r"
      ]
     }
    ],
