Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -619,7 +619,10 @@
       "\tEpoch: 60\tTrain loss: 0.054\tTrain Acc: 98.55875\n",
       "\tEpoch: 60\tTest loss: 1.754\tTest Acc: 76.856255\n",
       "==========================\n",
-      "Epoch: 61 i : 98 and loss: 0.016 acc: 1.0843755\r"
+      "\tEpoch: 61\tTrain loss: 0.049\tTrain Acc: 98.59225\n",
+      "\tEpoch: 61\tTest loss: 1.872\tTest Acc: 75.813755\n",
+      "==========================\n",
+      "Epoch: 62 i : 143 and loss: 0.108 acc: 0.9765625\r"
      ]
     }
    ],
