Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -569,7 +569,10 @@
       "\tEpoch: 36\tTrain loss: 0.045\tTrain Acc: 98.46455\n",
       "\tEpoch: 36\tTest loss: 1.159\tTest Acc: 80.851255\n",
       "==========================\n",
-      "Epoch: 37 i : 388 and loss: 0.006 acc: 1.0765625\r"
+      "\tEpoch: 37\tTrain loss: 0.036\tTrain Acc: 98.72475\n",
+      "\tEpoch: 37\tTest loss: 1.523\tTest Acc: 78.174375\n",
+      "==========================\n",
+      "Epoch: 38 i : 35 and loss: 0.066 acc: 0.9921875\r"
      ]
     }
    ],
