Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -622,7 +622,10 @@
       "\tEpoch: 61\tTrain loss: 0.049\tTrain Acc: 98.59225\n",
       "\tEpoch: 61\tTest loss: 1.872\tTest Acc: 75.813755\n",
       "==========================\n",
-      "Epoch: 62 i : 143 and loss: 0.108 acc: 0.9765625\r"
+      "\tEpoch: 62\tTrain loss: 0.055\tTrain Acc: 98.42475\n",
+      "\tEpoch: 62\tTest loss: 1.694\tTest Acc: 77.545875\n",
+      "==========================\n",
+      "Epoch: 63 i : 178 and loss: 0.028 acc: 0.9843755\r"
      ]
     }
    ],
