Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -483,7 +483,8 @@
       "\tEpoch: 13\tTrain loss: 0.317\tTrain Acc: 88.94855\n",
       "\tEpoch: 13\tTest loss: 0.817\tTest Acc: 76.421875\n",
       "==========================\n",
-      "Epoch: 14 i : 347 and loss: 0.193 acc: 0.9140625\r"
+      "\tEpoch: 14\tTrain loss: 0.282\tTrain Acc: 90.20855\n",
+      "Epoch: 14 i : 3 and loss: 1.056 acc: 0.7421875\r"
      ]
     }
    ],
