Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -572,7 +572,8 @@
       "\tEpoch: 37\tTrain loss: 0.036\tTrain Acc: 98.72475\n",
       "\tEpoch: 37\tTest loss: 1.523\tTest Acc: 78.174375\n",
       "==========================\n",
-      "Epoch: 38 i : 325 and loss: 0.02 acc: 0.99218755\r"
+      "\tEpoch: 38\tTrain loss: 0.043\tTrain Acc: 98.51475\n",
+      "Epoch: 38 i : 79 and loss: 1.204 acc: 0.8125255\r"
      ]
     }
    ],
