Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -484,7 +484,9 @@
       "\tEpoch: 13\tTest loss: 0.817\tTest Acc: 76.421875\n",
       "==========================\n",
       "\tEpoch: 14\tTrain loss: 0.282\tTrain Acc: 90.20855\n",
-      "Epoch: 14 i : 3 and loss: 1.056 acc: 0.7421875\r"
+      "\tEpoch: 14\tTest loss: 0.866\tTest Acc: 75.465755\n",
+      "==========================\n",
+      "Epoch: 15 i : 5 and loss: 0.242 acc: 0.9140625\r"
      ]
     }
    ],
