--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -573,7 +573,9 @@
       "\tEpoch: 37\tTest loss: 1.523\tTest Acc: 78.174375\n",
       "==========================\n",
       "\tEpoch: 38\tTrain loss: 0.043\tTrain Acc: 98.51475\n",
-      "Epoch: 38 i : 79 and loss: 1.204 acc: 0.8125255\r"
+      "\tEpoch: 38\tTest loss: 1.223\tTest Acc: 79.685255\n",
+      "==========================\n",
+      "Epoch: 39 i : 140 and loss: 0.059 acc: 0.9843755\r"
      ]
     }
    ],
