Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -625,7 +625,10 @@
       "\tEpoch: 62\tTrain loss: 0.055\tTrain Acc: 98.42475\n",
       "\tEpoch: 62\tTest loss: 1.694\tTest Acc: 77.545875\n",
       "==========================\n",
-      "Epoch: 63 i : 178 and loss: 0.028 acc: 0.9843755\r"
+      "\tEpoch: 63\tTrain loss: 0.045\tTrain Acc: 98.65275\n",
+      "\tEpoch: 63\tTest loss: 1.835\tTest Acc: 76.769375\n",
+      "==========================\n",
+      "Epoch: 64 i : 272 and loss: 0.034 acc: 0.9921875\r"
      ]
     }
    ],
