--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -575,7 +575,8 @@
       "\tEpoch: 38\tTrain loss: 0.043\tTrain Acc: 98.51475\n",
       "\tEpoch: 38\tTest loss: 1.223\tTest Acc: 79.685255\n",
       "==========================\n",
-      "Epoch: 39 i : 326 and loss: 0.002 acc: 1.0687575\r"
+      "\tEpoch: 39\tTrain loss: 0.037\tTrain Acc: 98.71225\n",
+      "Epoch: 39 i : 63 and loss: 1.159 acc: 0.7890625\r"
      ]
     }
    ],
