--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -576,7 +576,9 @@
       "\tEpoch: 38\tTest loss: 1.223\tTest Acc: 79.685255\n",
       "==========================\n",
       "\tEpoch: 39\tTrain loss: 0.037\tTrain Acc: 98.71225\n",
-      "Epoch: 39 i : 63 and loss: 1.159 acc: 0.7890625\r"
+      "\tEpoch: 39\tTest loss: 1.263\tTest Acc: 81.130625\n",
+      "==========================\n",
+      "Epoch: 40 i : 75 and loss: 0.029 acc: 0.9921875\r"
      ]
     }
    ],
