Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -628,7 +628,10 @@
       "\tEpoch: 63\tTrain loss: 0.045\tTrain Acc: 98.65275\n",
       "\tEpoch: 63\tTest loss: 1.835\tTest Acc: 76.769375\n",
       "==========================\n",
-      "Epoch: 64 i : 272 and loss: 0.034 acc: 0.9921875\r"
+      "\tEpoch: 64\tTrain loss: 0.056\tTrain Acc: 98.47475\n",
+      "\tEpoch: 64\tTest loss: 1.537\tTest Acc: 78.295255\n",
+      "==========================\n",
+      "Epoch: 65 i : 300 and loss: 0.091 acc: 0.9843755\r"
      ]
     }
    ],
