--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -578,7 +578,10 @@
       "\tEpoch: 39\tTrain loss: 0.037\tTrain Acc: 98.71225\n",
       "\tEpoch: 39\tTest loss: 1.263\tTest Acc: 81.130625\n",
       "==========================\n",
-      "Epoch: 40 i : 357 and loss: 0.011 acc: 1.0437555\r"
+      "\tEpoch: 40\tTrain loss: 0.036\tTrain Acc: 98.78855\n",
+      "\tEpoch: 40\tTest loss: 1.18\tTest Acc: 80.8725755\n",
+      "==========================\n",
+      "Epoch: 41 i : 4 and loss: 0.068 acc: 0.9687575\r"
      ]
     }
    ],
