Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -581,7 +581,7 @@
       "\tEpoch: 40\tTrain loss: 0.036\tTrain Acc: 98.78855\n",
       "\tEpoch: 40\tTest loss: 1.18\tTest Acc: 80.8725755\n",
       "==========================\n",
-      "Epoch: 41 i : 100 and loss: 0.043 acc: 0.984375\r"
+      "Epoch: 41 i : 202 and loss: 0.131 acc: 0.9609375\r"
      ]
     }
    ],
