Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -631,7 +631,16 @@
       "\tEpoch: 64\tTrain loss: 0.056\tTrain Acc: 98.47475\n",
       "\tEpoch: 64\tTest loss: 1.537\tTest Acc: 78.295255\n",
       "==========================\n",
-      "Epoch: 65 i : 300 and loss: 0.091 acc: 0.9843755\r"
+      "\tEpoch: 65\tTrain loss: 0.041\tTrain Acc: 98.84755\n",
+      "\tEpoch: 65\tTest loss: 1.7\tTest Acc: 77.06556255\n",
+      "==========================\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 66 i : 354 and loss: 0.027 acc: 0.9921875\r"
      ]
     }
    ],
