--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -486,7 +486,8 @@
       "\tEpoch: 14\tTrain loss: 0.282\tTrain Acc: 90.20855\n",
       "\tEpoch: 14\tTest loss: 0.866\tTest Acc: 75.465755\n",
       "==========================\n",
-      "Epoch: 15 i : 370 and loss: 0.19 acc: 0.96093755\r"
+      "\tEpoch: 15\tTrain loss: 0.251\tTrain Acc: 91.25875\n",
+      "Epoch: 15 i : 51 and loss: 0.878 acc: 0.7734375\r"
      ]
     }
    ],
