Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -487,7 +487,9 @@
       "\tEpoch: 14\tTest loss: 0.866\tTest Acc: 75.465755\n",
       "==========================\n",
       "\tEpoch: 15\tTrain loss: 0.251\tTrain Acc: 91.25875\n",
-      "Epoch: 15 i : 51 and loss: 0.878 acc: 0.7734375\r"
+      "\tEpoch: 15\tTest loss: 1.027\tTest Acc: 74.551255\n",
+      "==========================\n",
+      "Epoch: 16 i : 29 and loss: 0.147 acc: 0.9453125\r"
      ]
     }
    ],
