--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -581,7 +581,10 @@
       "\tEpoch: 40\tTrain loss: 0.036\tTrain Acc: 98.78855\n",
       "\tEpoch: 40\tTest loss: 1.18\tTest Acc: 80.8725755\n",
       "==========================\n",
-      "Epoch: 41 i : 300 and loss: 0.008 acc: 1.0843755\r"
+      "\tEpoch: 41\tTrain loss: 0.037\tTrain Acc: 98.73755\n",
+      "\tEpoch: 41\tTest loss: 1.172\tTest Acc: 80.938755\n",
+      "==========================\n",
+      "Epoch: 42 i : 14 and loss: 0.012 acc: 0.9921875\r"
      ]
     }
    ],
