Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -640,7 +640,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 66 i : 354 and loss: 0.027 acc: 0.9921875\r"
+      "\tEpoch: 66\tTrain loss: 0.039\tTrain Acc: 98.91755\n",
+      "\tEpoch: 66\tTest loss: 2.044\tTest Acc: 77.125375\n",
+      "==========================\n",
+      "Epoch: 67 i : 387 and loss: 0.059 acc: 0.9843755\r"
      ]
     }
    ],
