Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -584,7 +584,8 @@
       "\tEpoch: 41\tTrain loss: 0.037\tTrain Acc: 98.73755\n",
       "\tEpoch: 41\tTest loss: 1.172\tTest Acc: 80.938755\n",
       "==========================\n",
-      "Epoch: 42 i : 309 and loss: 0.007 acc: 1.0843755\r"
+      "\tEpoch: 42\tTrain loss: 0.03\tTrain Acc: 98.956755\n",
+      "Epoch: 42 i : 13 and loss: 1.307 acc: 0.8203125\r"
      ]
     }
    ],
