Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -585,7 +585,9 @@
       "\tEpoch: 41\tTest loss: 1.172\tTest Acc: 80.938755\n",
       "==========================\n",
       "\tEpoch: 42\tTrain loss: 0.03\tTrain Acc: 98.956755\n",
-      "Epoch: 42 i : 13 and loss: 1.307 acc: 0.8203125\r"
+      "\tEpoch: 42\tTest loss: 1.393\tTest Acc: 80.775875\n",
+      "==========================\n",
+      "Epoch: 43 i : 53 and loss: 0.055 acc: 0.9843755\r"
      ]
     }
    ],
