Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -643,7 +643,11 @@
       "\tEpoch: 66\tTrain loss: 0.039\tTrain Acc: 98.91755\n",
       "\tEpoch: 66\tTest loss: 2.044\tTest Acc: 77.125375\n",
       "==========================\n",
-      "Epoch: 67 i : 387 and loss: 0.059 acc: 0.9843755\r"
+      "\tEpoch: 67\tTrain loss: 0.055\tTrain Acc: 98.49755\n",
+      "\tEpoch: 67\tTest loss: 1.586\tTest Acc: 78.471875\n",
+      "==========================\n",
+      "\tEpoch: 68\tTrain loss: 0.041\tTrain Acc: 98.81875\n",
+      "Epoch: 68 i : 52 and loss: 1.534 acc: 0.7812525\r"
      ]
     }
    ],
