Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -587,7 +587,9 @@
       "\tEpoch: 42\tTrain loss: 0.03\tTrain Acc: 98.956755\n",
       "\tEpoch: 42\tTest loss: 1.393\tTest Acc: 80.775875\n",
       "==========================\n",
-      "Epoch: 43 i : 346 and loss: 0.05 acc: 0.97656255\r"
+      "\tEpoch: 43\tTrain loss: 0.039\tTrain Acc: 98.67255\n",
+      "\tEpoch: 43\tTest loss: 1.263\tTest Acc: 80.085375\n",
+      "==========================\n"
      ]
     }
    ],
