Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -489,7 +489,7 @@
       "\tEpoch: 15\tTrain loss: 0.251\tTrain Acc: 91.25875\n",
       "\tEpoch: 15\tTest loss: 1.027\tTest Acc: 74.551255\n",
       "==========================\n",
-      "Epoch: 16 i : 336 and loss: 0.252 acc: 0.9296875\r"
+      "\tEpoch: 16\tTrain loss: 0.232\tTrain Acc: 91.68825\n"
      ]
     }
    ],
