--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -647,7 +647,12 @@
       "\tEpoch: 67\tTest loss: 1.586\tTest Acc: 78.471875\n",
       "==========================\n",
       "\tEpoch: 68\tTrain loss: 0.041\tTrain Acc: 98.81875\n",
-      "Epoch: 68 i : 52 and loss: 1.534 acc: 0.7812525\r"
+      "\tEpoch: 68\tTest loss: 1.688\tTest Acc: 78.595555\n",
+      "==========================\n",
+      "\tEpoch: 69\tTrain loss: 0.041\tTrain Acc: 98.85675\n",
+      "\tEpoch: 69\tTest loss: 1.679\tTest Acc: 76.945625\n",
+      "==========================\n",
+      "Epoch: 70 i : 37 and loss: 0.014 acc: 0.9921875\r"
      ]
     }
    ],
