Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -491,7 +491,8 @@
       "==========================\n",
       "\tEpoch: 16\tTrain loss: 0.232\tTrain Acc: 91.68825\n",
       "\tEpoch: 16\tTest loss: 0.977\tTest Acc: 76.581875\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 17 i : 48 and loss: 0.247 acc: 0.9218755\r"
      ]
     }
    ],
