--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -590,7 +590,9 @@
       "\tEpoch: 43\tTrain loss: 0.039\tTrain Acc: 98.67255\n",
       "\tEpoch: 43\tTest loss: 1.263\tTest Acc: 80.085375\n",
       "==========================\n",
-      "Epoch: 44 i : 350 and loss: 0.014 acc: 1.0218755\r"
+      "\tEpoch: 44\tTrain loss: 0.028\tTrain Acc: 99.02675\n",
+      "\tEpoch: 44\tTest loss: 1.251\tTest Acc: 80.464375\n",
+      "==========================\n"
      ]
     }
    ],
