Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -592,7 +592,8 @@
       "==========================\n",
       "\tEpoch: 44\tTrain loss: 0.028\tTrain Acc: 99.02675\n",
       "\tEpoch: 44\tTest loss: 1.251\tTest Acc: 80.464375\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 45 i : 98 and loss: 0.008 acc: 1.0765625\r"
      ]
     }
    ],
