Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -652,7 +652,10 @@
       "\tEpoch: 69\tTrain loss: 0.041\tTrain Acc: 98.85675\n",
       "\tEpoch: 69\tTest loss: 1.679\tTest Acc: 76.945625\n",
       "==========================\n",
-      "Epoch: 70 i : 37 and loss: 0.014 acc: 0.9921875\r"
+      "\tEpoch: 70\tTrain loss: 0.053\tTrain Acc: 98.47255\n",
+      "\tEpoch: 70\tTest loss: 1.802\tTest Acc: 77.143755\n",
+      "==========================\n",
+      "Epoch: 71 i : 127 and loss: 0.046 acc: 0.9843755\r"
      ]
     }
    ],
