Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -593,7 +593,10 @@
       "\tEpoch: 44\tTrain loss: 0.028\tTrain Acc: 99.02675\n",
       "\tEpoch: 44\tTest loss: 1.251\tTest Acc: 80.464375\n",
       "==========================\n",
-      "Epoch: 45 i : 390 and loss: 0.021 acc: 0.9921875\r"
+      "\tEpoch: 45\tTrain loss: 0.03\tTrain Acc: 98.944875\n",
+      "\tEpoch: 45\tTest loss: 1.399\tTest Acc: 79.909375\n",
+      "==========================\n",
+      "Epoch: 46 i : 36 and loss: 0.018 acc: 0.9921875\r"
      ]
     }
    ],
