--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -655,7 +655,10 @@
       "\tEpoch: 70\tTrain loss: 0.053\tTrain Acc: 98.47255\n",
       "\tEpoch: 70\tTest loss: 1.802\tTest Acc: 77.143755\n",
       "==========================\n",
-      "Epoch: 71 i : 127 and loss: 0.046 acc: 0.9843755\r"
+      "\tEpoch: 71\tTrain loss: 0.039\tTrain Acc: 98.89655\n",
+      "\tEpoch: 71\tTest loss: 1.772\tTest Acc: 77.975755\n",
+      "==========================\n",
+      "Epoch: 72 i : 171 and loss: 0.021 acc: 0.9921875\r"
      ]
     }
    ],
