--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -492,7 +492,8 @@
       "\tEpoch: 16\tTrain loss: 0.232\tTrain Acc: 91.68825\n",
       "\tEpoch: 16\tTest loss: 0.977\tTest Acc: 76.581875\n",
       "==========================\n",
-      "Epoch: 17 i : 361 and loss: 0.285 acc: 0.9062525\r"
+      "\tEpoch: 17\tTrain loss: 0.21\tTrain Acc: 92.484255\n",
+      "Epoch: 17 i : 43 and loss: 0.975 acc: 0.7734375\r"
      ]
     }
    ],
