Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -596,7 +596,9 @@
       "\tEpoch: 45\tTrain loss: 0.03\tTrain Acc: 98.944875\n",
       "\tEpoch: 45\tTest loss: 1.399\tTest Acc: 79.909375\n",
       "==========================\n",
-      "Epoch: 46 i : 357 and loss: 0.004 acc: 1.0921875\r"
+      "\tEpoch: 46\tTrain loss: 0.031\tTrain Acc: 98.88655\n",
+      "\tEpoch: 46\tTest loss: 1.408\tTest Acc: 80.125555\n",
+      "==========================\n"
      ]
     }
    ],
