Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -658,7 +658,10 @@
       "\tEpoch: 71\tTrain loss: 0.039\tTrain Acc: 98.89655\n",
       "\tEpoch: 71\tTest loss: 1.772\tTest Acc: 77.975755\n",
       "==========================\n",
-      "Epoch: 72 i : 171 and loss: 0.021 acc: 0.9921875\r"
+      "\tEpoch: 72\tTrain loss: 0.042\tTrain Acc: 98.78875\n",
+      "\tEpoch: 72\tTest loss: 1.887\tTest Acc: 77.711255\n",
+      "==========================\n",
+      "Epoch: 73 i : 332 and loss: 0.01 acc: 0.99218755\r"
      ]
     }
    ],
