Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -598,7 +598,8 @@
       "==========================\n",
       "\tEpoch: 46\tTrain loss: 0.031\tTrain Acc: 98.88655\n",
       "\tEpoch: 46\tTest loss: 1.408\tTest Acc: 80.125555\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 47 i : 88 and loss: 0.013 acc: 0.9921875\r"
      ]
     }
    ],
