--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -493,7 +493,9 @@
       "\tEpoch: 16\tTest loss: 0.977\tTest Acc: 76.581875\n",
       "==========================\n",
       "\tEpoch: 17\tTrain loss: 0.21\tTrain Acc: 92.484255\n",
-      "Epoch: 17 i : 43 and loss: 0.975 acc: 0.7734375\r"
+      "\tEpoch: 17\tTest loss: 0.929\tTest Acc: 76.685255\n",
+      "==========================\n",
+      "Epoch: 18 i : 22 and loss: 0.17 acc: 0.92968755\r"
      ]
     }
    ],
