Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -661,7 +661,10 @@
       "\tEpoch: 72\tTrain loss: 0.042\tTrain Acc: 98.78875\n",
       "\tEpoch: 72\tTest loss: 1.887\tTest Acc: 77.711255\n",
       "==========================\n",
-      "Epoch: 73 i : 332 and loss: 0.01 acc: 0.99218755\r"
+      "\tEpoch: 73\tTrain loss: 0.047\tTrain Acc: 98.67675\n",
+      "\tEpoch: 73\tTest loss: 1.903\tTest Acc: 78.514375\n",
+      "==========================\n",
+      "Epoch: 74 i : 370 and loss: 0.027 acc: 0.9921875\r"
      ]
     }
    ],
