--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -599,7 +599,10 @@
       "\tEpoch: 46\tTrain loss: 0.031\tTrain Acc: 98.88655\n",
       "\tEpoch: 46\tTest loss: 1.408\tTest Acc: 80.125555\n",
       "==========================\n",
-      "Epoch: 47 i : 377 and loss: 0.049 acc: 0.9843755\r"
+      "\tEpoch: 47\tTrain loss: 0.027\tTrain Acc: 99.12675\n",
+      "\tEpoch: 47\tTest loss: 1.388\tTest Acc: 79.721875\n",
+      "==========================\n",
+      "Epoch: 48 i : 19 and loss: 0.005 acc: 1.0921875\r"
      ]
     }
    ],
