Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -664,7 +664,10 @@
       "\tEpoch: 73\tTrain loss: 0.047\tTrain Acc: 98.67675\n",
       "\tEpoch: 73\tTest loss: 1.903\tTest Acc: 78.514375\n",
       "==========================\n",
-      "Epoch: 74 i : 370 and loss: 0.027 acc: 0.9921875\r"
+      "\tEpoch: 74\tTrain loss: 0.042\tTrain Acc: 98.77625\n",
+      "\tEpoch: 74\tTest loss: 1.799\tTest Acc: 78.525125\n",
+      "==========================\n",
+      "\tEpoch: 75\tTrain loss: 0.039\tTrain Acc: 98.93825\n"
      ]
     }
    ],
