--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -602,7 +602,7 @@
       "\tEpoch: 47\tTrain loss: 0.027\tTrain Acc: 99.12675\n",
       "\tEpoch: 47\tTest loss: 1.388\tTest Acc: 79.721875\n",
       "==========================\n",
-      "Epoch: 48 i : 298 and loss: 0.033 acc: 0.9921875\r"
+      "\tEpoch: 48\tTrain loss: 0.031\tTrain Acc: 98.98475\n"
      ]
     }
    ],
