--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -602,7 +602,10 @@
       "\tEpoch: 47\tTrain loss: 0.027\tTrain Acc: 99.12675\n",
       "\tEpoch: 47\tTest loss: 1.388\tTest Acc: 79.721875\n",
       "==========================\n",
-      "\tEpoch: 48\tTrain loss: 0.031\tTrain Acc: 98.98475\n"
+      "\tEpoch: 48\tTrain loss: 0.031\tTrain Acc: 98.98475\n",
+      "\tEpoch: 48\tTest loss: 1.351\tTest Acc: 80.557575\n",
+      "==========================\n",
+      "Epoch: 49 i : 44 and loss: 0.005 acc: 1.0921875\r"
      ]
     }
    ],
