--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -495,7 +495,10 @@
       "\tEpoch: 17\tTrain loss: 0.21\tTrain Acc: 92.484255\n",
       "\tEpoch: 17\tTest loss: 0.929\tTest Acc: 76.685255\n",
       "==========================\n",
-      "\tEpoch: 18\tTrain loss: 0.189\tTrain Acc: 93.15455\n"
+      "\tEpoch: 18\tTrain loss: 0.189\tTrain Acc: 93.15455\n",
+      "\tEpoch: 18\tTest loss: 1.1\tTest Acc: 73.99125755\n",
+      "==========================\n",
+      "Epoch: 19 i : 1 and loss: 0.268 acc: 0.921875\r"
      ]
     }
    ],
