Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -667,7 +667,13 @@
       "\tEpoch: 74\tTrain loss: 0.042\tTrain Acc: 98.77625\n",
       "\tEpoch: 74\tTest loss: 1.799\tTest Acc: 78.525125\n",
       "==========================\n",
-      "\tEpoch: 75\tTrain loss: 0.039\tTrain Acc: 98.93825\n"
+      "\tEpoch: 75\tTrain loss: 0.039\tTrain Acc: 98.93825\n",
+      "\tEpoch: 75\tTest loss: 1.713\tTest Acc: 78.155125\n",
+      "==========================\n",
+      "\tEpoch: 76\tTrain loss: 0.041\tTrain Acc: 98.83255\n",
+      "\tEpoch: 76\tTest loss: 1.897\tTest Acc: 77.777525\n",
+      "==========================\n",
+      "Epoch: 77 i : 44 and loss: 0.01 acc: 0.99218755\r"
      ]
     }
    ],
