--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -498,7 +498,7 @@
       "\tEpoch: 18\tTrain loss: 0.189\tTrain Acc: 93.15455\n",
       "\tEpoch: 18\tTest loss: 1.1\tTest Acc: 73.99125755\n",
       "==========================\n",
-      "Epoch: 19 i : 1 and loss: 0.268 acc: 0.921875\r"
+      "Epoch: 19 i : 54 and loss: 0.273 acc: 0.8984375\r"
      ]
     }
    ],
