--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -605,7 +605,10 @@
       "\tEpoch: 48\tTrain loss: 0.031\tTrain Acc: 98.98475\n",
       "\tEpoch: 48\tTest loss: 1.351\tTest Acc: 80.557575\n",
       "==========================\n",
-      "Epoch: 49 i : 379 and loss: 0.014 acc: 1.0843755\r"
+      "\tEpoch: 49\tTrain loss: 0.03\tTrain Acc: 98.954875\n",
+      "\tEpoch: 49\tTest loss: 1.273\tTest Acc: 80.747525\n",
+      "==========================\n",
+      "Epoch: 50 i : 25 and loss: 0.01 acc: 0.99218755\r"
      ]
     }
    ],
