Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -673,7 +673,10 @@
       "\tEpoch: 76\tTrain loss: 0.041\tTrain Acc: 98.83255\n",
       "\tEpoch: 76\tTest loss: 1.897\tTest Acc: 77.777525\n",
       "==========================\n",
-      "Epoch: 77 i : 44 and loss: 0.01 acc: 0.99218755\r"
+      "\tEpoch: 77\tTrain loss: 0.037\tTrain Acc: 98.87675\n",
+      "\tEpoch: 77\tTest loss: 1.714\tTest Acc: 77.225875\n",
+      "==========================\n",
+      "Epoch: 78 i : 80 and loss: 0.018 acc: 1.0687525\r"
      ]
     }
    ],
